--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment-timezone": "^0.5.44",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   }
 }
