--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
