--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-mailchimp-subscribe": "^2.1.3",
+    "use-mailchimp-form": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
